# octoprint__octoprint

./: setup.cfg  setup.py  tasks.py
src/octoprint/access/: groups.py  permissions.py
src/octoprint/cli/: __init__.py  dev.py  plugins.py  server.py
src/octoprint/filemanager/: analysis.py  destinations.py  storage.py
src/octoprint/logging/: __init__.py
src/octoprint/plugin/: __init__.py  core.py  types.py
src/octoprint/plugins/softwareupdate/: __init__.py
src/octoprint/printer/: standard.py
src/octoprint/schema/: __init__.py
src/octoprint/schema/config/: appearance.py  controls.py  devel.py  events.py  gcode_analysis.py  serial.py  server.py  webcam.py
src/octoprint/schema/printer/: __init__.py
src/octoprint/schema/webcam/: __init__.py
src/octoprint/server/: views.py
src/octoprint/util/: __init__.py
tests/plugin/: test_settings.py
