[metadata]
name = OctoPrint
version = attr: octoprint.__version__
description = The snappy web interface for your 3D printer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://octoprint.org
author = Gina Häußge
author_email = gina@octoprint.org
keywords =
    3dprinting
    3dprinter
    3d-printing
    3d-printer
    octoprint
project_urls =
    Community Forum = https://community.octoprint.org
    Bug Reports = https://github.com/OctoPrint/OctoPrint/issues
    Source = https://github.com/OctoPrint/OctoPrint
    Funding = https://support.octoprint.org
license_files = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Intended Audience :: Manufacturing
    Intended Audience :: Other Audience
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3
    Natural Language :: English
    Natural Language :: German
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: JavaScript
    Topic :: Printing
    Topic :: System :: Monitoring

[options]
packages = find:
package_dir =
    = src
include_package_data = True

zip_safe = False

python_requires = >=3.7,<3.12
install_requires =
    # bundled plugins
    OctoPrint-FileCheck>=2021.2.23
    OctoPrint-FirmwareCheck>=2021.10.11
    OctoPrint-PiSupport>=2022.6.13

    # core dependencies
    appdirs>=1.4.4,<2;sys_platform == "darwin"
    argon2_cffi>=21.3.0,<22
    Babel>=2.12.1,<2.13  # breaking changes can happen on minor version increases
    cachelib>=0.10.2,<0.11
    Click>=8.1.3,<9
    colorlog>=6.7.0,<7
    emoji>=2.2.0,<3
    feedparser>=6.0.10,<7
    filetype>=1.2.0,<2
    Flask-Assets>=2.0,<3
    Flask-Babel>=3.1.0,<4
    Flask-Login>=0.6.2,<0.7  # breaking changes can happen on minor version increases
    Flask-Limiter>=3.3.0,<4
    flask>=2.2.3,<2.3  # breaking changes can happen on minor version increases (with deprecation warnings)
    frozendict>=2.3.7,<3
    future>=0.18.3,<1  # not really needed anymore, but leaving in for py2/3 compat plugins
    markdown>=3.4.3,<4
    netaddr>=0.8,<0.9  # changelog hints at breaking changes on minor version increases
    netifaces2>=0.0.14,<0.1
    passlib>=1.7.4,<2
    pathvalidate>=2.5.2,<3
    pkginfo>=1.9.6,<2
    psutil>=5.9.4,<6
    pydantic>=1.10.7,<2
    pylru>=1.2.1,<2
    pyserial>=3.5,<4
    PyYAML>=6.0.1,<7  # changelog at https://github.com/yaml/pyyaml/blob/master/CHANGES
    requests>=2.28.2,<3
    sarge==0.1.7.post1
    semantic_version>=2.10.0,<3
    sentry-sdk>=1.19.0,<2
    tornado>=6.2,<7
    watchdog>=2.3.1,<3
    websocket-client>=1.5.1,<2
    werkzeug>=2.2.3,<2.3 # breaking changes can happen on minor version increases
    wrapt>=1.15,<1.16
    zeroconf==0.39.4  # final version to include universal wheel, later takes ages to compiles on rpi, piwheels has no wheels for latest either
    zipstream-ng>=1.5.0,<2.0.0

    # vendored dependencies
    blinker>=1.6.1,<2  # dependency of flask_principal
    class-doc>=0.2.6,<0.3  # dependency of with_attrs_docs
    regex  # dependency of awesome-slugify
    unidecode  # dependency of awesome-slugify

    # plugin dependencies
    wheel

[options.extras_require]
develop =
    # Testing dependencies
    ddt
    mock>=5.0.1,<6
    pytest-doctest-custom>=1.0.0,<2
    pytest>=7.3.0,<8
    # pre-commit
    pre-commit
    # profiler
    pyinstrument
    # task runner
    invoke
plugins =
    cookiecutter>=2.1.1,<3
docs =
    sphinx
    sphinxcontrib-httpdomain
    sphinxcontrib-mermaid
    sphinx_rtd_theme
    readthedocs-sphinx-ext

[options.packages.find]
where = src


[bdist_wheel]
universal = 1

[versioneer]
VCS = git
style = pep440-tag
versionfile_source = src/octoprint/_version.py
versionfile_build = octoprint/_version.py
tag_prefix =
parentdir_prefix =
lookupfile = .versioneer-lookup

[flake8]
max-line-length = 90
extend-ignore = E203, E231, E265, E266, E402, E501, E731, B023, B903, B904, B907, B950, W503
select = B,C,E,F,W,T4,B9
exclude =
    src/octoprint/vendor

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 90
skip =
    src/octoprint/vendor
known_first_party =
    octoprint
    octoprint_setuptools
    octoprint_client

[codespell]
skip = *.po,*.min.js,.git,*/vendor/*,*/lib/*,*/bootstrap/*,*/node_modules/*,*/translations/*,*/venv*,*/.*,*/build/*,*/_build/*,setup.cfg,AUTHORS.md
ignore-words = .codespell_ignore_words
quiet-level = 3
count =
